--- a/src/main/resources/static/OpenLayers map preview.html
+++ b/src/main/resources/static/OpenLayers map preview.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <link rel="stylesheet" href="/OpenLayers map preview_files/ol.css" type="text/css">
+  <link rel="stylesheet" href="./OpenLayers map preview_files/ol.css" type="text/css">
   <style>
     .ol-zoom {
       top: 52px;
@@ -437,13 +437,13 @@
   </div>
   <div id="map">
 
-    <!-- <div class="ol-toggle-options ol-unselectable">
-      <a title="Toggle options toolbar" onclick="toggleControlPanel()"
-        th:href="@{'http://localhost:8080/geoserver/'+${server}+'/wms?service=WMS&amp;version=1.1.0&amp;request=GetMap&amp;layers='+${server}+'%3A'+${layername}&amp;bbox=-180.0%2C-90.0%2C180.0%2C90.0&amp;width=768&amp;height=384&amp;srs=EPSG%3A4326&amp;format=application/openlayers#toggle}">...</a>
-    </div>  -->
-    <!-- <div class="ol-viewport"
+    <div class="ol-toggle-options ol-unselectable">
+      <!-- <a title="Toggle options toolbar" onclick="toggleControlPanel()"
+        th:href="@{'http://localhost:8080/geoserver/'+${server}+'/wms?service=WMS&amp;version=1.1.0&amp;request=GetMap&amp;layers='+${server}+'%3A'+${layername}&amp;bbox=-180.0%2C-90.0%2C180.0%2C90.0&amp;width=768&amp;height=384&amp;srs=EPSG%3A4326&amp;format=application/openlayers#toggle}">...</a> -->
+    </div> 
+    <div class="ol-viewport"
       style="position: relative; overflow: hidden; width: 100%; height: 100%; touch-action: none;"><canvas
-        class="ol-unselectable" width="1000" height="600" style="width: 100%; height: 100%;"></canvas>
+        class="ol-unselectable" width="960" height="480" style="width: 100%; height: 100%;"></canvas>
       <div class="ol-overlaycontainer"></div>
       <div class="ol-overlaycontainer-stopevent">
         <div class="ol-zoom ol-unselectable ol-control"><button class="ol-zoom-in" type="button"
@@ -451,7 +451,7 @@
         <div class="ol-rotate ol-unselectable ol-control ol-hidden"><button class="ol-rotate-reset" type="button"
             title="Reset rotation"><span class="ol-compass" style="transform: rotate(0rad);">⇧</span></button></div>
       </div>
-    </div> -->
+    </div>
   </div>
   <div id="wrapper">
     <div id="location">
@@ -461,7 +461,7 @@
     <div id="nodelist">
       <em>Click on the map to get feature info</em>
     </div>
-    <script src="https://openlayers.org/en/v4.6.5/build/ol.js" type="text/javascript"></script>
+    <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
     <script type="text/javascript">
       var pureCoverage = true;
       // if this is just a coverage or a group of them, disable a few items,
@@ -562,7 +562,7 @@
             'FEATURE_COUNT': 50
           });
         if (url) {
-          document.getElementById('nodelist').innerHTML = '<iframe seamless src="' + url + '" target="_parent"></iframe>';
+          document.getElementById('nodelist').innerHTML = '<iframe seamless src="' + url + '"></iframe>';
         }
       });
 
